logs/libcreate2py.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/create2'...
Compiling './lib/python3.5/site-packages/create2/create2.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (create2.py, line 45)
Compiling './lib/python3.5/site-packages/create2/sample.py'...
***   File "./lib/python3.5/site-packages/create2/sample.py", line 22
    print "distance:"+str(distance)+"\tL:"+str(create2.get_left_encoder())+"\tR:"+str(create2.get_right_encoder())
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/create2/sample2.py'...
***   File "./lib/python3.5/site-packages/create2/sample2.py", line 37
    print self.state
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/create2/sample3.py'...
***   File "./lib/python3.5/site-packages/create2/sample3.py", line 23
    print "angle:"+str(angle)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/create2/sensor_observer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sensor_observer.py, line 103)
Listing './lib/python3.5/site-packages/libcreate2py-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
